<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- Screen Design for control cpu tab -->

    <LinearLayout
        android:id="@+id/controlCpuContent"
        style="@style/Content" >

        <LinearLayout
            android:id="@+id/controlCpu"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/controlCpuTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/cpuTitle"
                    style="@style/textTitle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/setcpu" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/freqText"
                style="@style/Content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/minFreq"
                    style="@style/textCpu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/maxFreq"
                    style="@style/textCpu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/freqSeekBar"
                style="@style/Content"
                android:orientation="horizontal" >

                <LinearLayout
                    style="@style/Content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <SeekBar
                        android:id="@+id/minFreqSeek"
                        style="@style/cpuFreqBar"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >
                    </SeekBar>

                    <TextView
                        android:id="@+id/minFreqSeekProgress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#ffd700" />
                </LinearLayout>

                <LinearLayout
                    style="@style/Content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <SeekBar
                        android:id="@+id/maxFreqSeek"
                        style="@style/cpuFreqBar"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >
                    </SeekBar>

                    <TextView
                        android:id="@+id/maxFreqSeekProgress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#ffd700" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttonSetCpuFreq"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:textColor="#FFFFFF" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/setCpuButton"
                        style="@style/setCpuButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/setCpuProfileButton"
                        style="@style/setCpuProfileButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/separate"
            style="@style/SeparateLine"
            android:orientation="horizontal" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/cpuTitle"
                style="@style/textTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/setcpugovernor" />

            <LinearLayout
                android:id="@+id/governors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:textColor="#FFFFFF"
                android:weightSum="1" >

                <!-- android:prompt="@string/spinner_prompt" -->

                <LinearLayout
                    android:id="@+id/governorsSpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical"
                    android:textColor="#FFFFFF" >

                    <Button
                        android:id="@+id/governorButton"
                        style="@style/setCpuGovernorButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/currentGov"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical"
                    android:textColor="#FFFFFF" >

                    <TextView
                        android:id="@+id/currentGovDescription"
                        style="@style/textCpu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:text="@string/currentGovernorDesc" />

                    <TextView
                        android:id="@+id/updatedCurrentGov"
                        style="@style/dynamicTexts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/separate"
            style="@style/SeparateLine"
            android:orientation="horizontal" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/cpuTitle"
                style="@style/textTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/setioschedule" />

            <LinearLayout
                android:id="@+id/ioschedulerlayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/setIOScheduleButton"
                        style="@style/setIOScheduleButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/ioscheduledesc"
                        style="@style/textCpu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:text="@string/currentIOScheduleDesc" />

                    <TextView
                        android:id="@+id/updateioschedule"
                        style="@style/dynamicTexts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/separate"
            style="@style/SeparateLine"
            android:orientation="horizontal" />
    </LinearLayout>

</LinearLayout>